syntax = "proto3";

message Vote {
  string user_id = 1;
  int32 category = 2;
  string item_id = 3;
  string signed = 4;
}